--- a/kubebuilder-demo/config/samples/ingress_v1beta1_app.yaml
+++ b/kubebuilder-demo/config/samples/ingress_v1beta1_app.yaml
@@ -3,4 +3,7 @@ kind: App
 metadata:
   name: app-sample
 spec:
-  # TODO(user): Add fields here
+  image: nginx:latest
+  replicas: 3
+  enable_ingress: false
+  enable_service: false
